--- a/FE/src/app/core/auth/components/login-form/login-form.component.html
+++ b/FE/src/app/core/auth/components/login-form/login-form.component.html
@@ -32,7 +32,7 @@
     <input
       matInput
       [type]="hidePass ? 'password' : 'text'"
-      placeholder="Nhập mật khẩu"
+      placeholder="Mật khẩu"
       formControlName="password"
     />
     <mat-icon matSuffix (click)="hidePass = !hidePass">{{
