--- a/FE/src/app/features/dashboard/lessor/pages/lessor-dashboard/lessor-dashboard.component.html
+++ b/FE/src/app/features/dashboard/lessor/pages/lessor-dashboard/lessor-dashboard.component.html
@@ -79,7 +79,7 @@
         <!-- Content -->
         <div class="px-lg-4 py-lg-5 p-3">
           <div class="bg-white shadow pt-5 pb-4 px-4">
-              <router-outlet name="lessor"></router-outlet>
+              <router-outlet></router-outlet>
           </div>
         </div>
       </mat-sidenav-content>
