--- a/FE/src/app/features/post/components/post-root-list/post-root-list.component.html
+++ b/FE/src/app/features/post/components/post-root-list/post-root-list.component.html
@@ -5,6 +5,8 @@
     <app-post-root-item></app-post-root-item>
   </div>
   }
-  <!-- Pagination -->
-  <app-pagination></app-pagination>
+  <div class="pt-5">
+    <!-- Pagination -->
+    <app-pagination></app-pagination>
+  </div>
 </div>
