--- a/FE/src/app/features/profiles/components/profile-edit/profile-edit.component.html
+++ b/FE/src/app/features/profiles/components/profile-edit/profile-edit.component.html
@@ -24,4 +24,9 @@
   <div class="tab-pane fade" id="profile">
     <app-profile-edit-profile [user]="user"></app-profile-edit-profile>
   </div>
+
+  <!-- Content three -->
+  <div class="tab-pane fade" id="account">
+    <app-profile-edit-account [user]="user"></app-profile-edit-account>
+  </div>
 </div>
