--- a/FE/src/app/features/lessor/components/lessor-list/lessor-list.component.html
+++ b/FE/src/app/features/lessor/components/lessor-list/lessor-list.component.html
@@ -1,11 +1,17 @@
-<div class="row gy-5">
-  <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-    <app-lessor-item></app-lessor-item>
+<div class="container" data-aos="fade-up">
+  <div class="row gy-5">
+    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+      <app-lessor-item></app-lessor-item>
+    </div>
+    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+      <app-lessor-item></app-lessor-item>
+    </div>
+    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+      <app-lessor-item></app-lessor-item>
+    </div>
   </div>
-  <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-    <app-lessor-item></app-lessor-item>
-  </div>
-  <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-    <app-lessor-item></app-lessor-item>
+  <div class="pt-5">
+    <!-- Pagination -->
+    <app-pagination></app-pagination>
   </div>
 </div>
