--- a/FE/src/app/features/profiles/components/profile-edit-overview/profile-edit-overview.component.html
+++ b/FE/src/app/features/profiles/components/profile-edit-overview/profile-edit-overview.component.html
@@ -1,7 +1,7 @@
 <div class="my-5">
   <h5 class="fs-5 fw-bold">Mô tả</h5>
   <p class="text-secondary">
-    {{ user?.description || "Chưa có thông tin chi tiết!" }}
+    {{ user?.description || "Chưa có thông tin mô tả ở đây!" }}
   </p>
 </div>
 
