--- a/FE/src/app/features/profiles/pages/profile/profile.component.scss
+++ b/FE/src/app/features/profiles/pages/profile/profile.component.scss
@@ -8,6 +8,9 @@
     i {
       min-width: 28px;
     }
+    &:hover{
+      background-color: #d9d9d9;
+    }
     &.active {
       background-color: #2eca6a !important;
       color: #fff !important;
