--- a/FE/src/app/core/auth/components/register-form/register-form.component.html
+++ b/FE/src/app/core/auth/components/register-form/register-form.component.html
@@ -70,6 +70,7 @@
       <input
         matInput
         [matDatepicker]="picker"
+        [max]="maxDate"
         placeholder="MM/DD/YYYY"
         formControlName="dateOfBirth"
       />
