--- a/FE/src/app/features/lessor/components/lessor-filter/lessor-filter.component.html
+++ b/FE/src/app/features/lessor/components/lessor-filter/lessor-filter.component.html
@@ -1,19 +1,4 @@
 <div class="container">
   <!-- Filter Bar -->
-  <div class="row g-2">
-    <div class="search col-md-10">
-      <div class="icon">
-        <img src="/assets/icons/search.svg" />
-      </div>
-      <input
-        type="text"
-        class="form-control"
-        placeholder="Nhập tối đa 5 địa điểm, dự án."
-      />
-    </div>
-
-    <div class="col-md-2">
-      <button class="btn btn-dark w-100">Tìm kiếm</button>
-    </div>
-  </div>
+  <app-search></app-search>
 </div>
