--- a/FE/src/app/features/lessor/components/lessor-item/lessor-item.component.html
+++ b/FE/src/app/features/lessor/components/lessor-item/lessor-item.component.html
@@ -3,19 +3,21 @@
     <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="" />
   </div>
   <div class="member-info">
-    <div class="d-flex align-item-center">
+    <div class="d-flex flex-wrap">
       <h4 class="flex-fill">Walter White</h4>
-      <div>
+      <div class="d-flex align-items-center gap-2 pb-2">
         <app-like></app-like>
-        {{ 65 }}
+        <span>{{ 65 }}</span>
       </div>
     </div>
-    <span>Chief Executive Officer</span>
-    <div class="social">
-      <a href=""><i class="bi bi-twitter-x"></i></a>
-      <a href=""><i class="bi bi-facebook"></i></a>
-      <a href=""><i class="bi bi-instagram"></i></a>
-      <a href=""><i class="bi bi-linkedin"></i></a>
+    <div class="d-flex flex-wrap justify-content-between align-items-center">
+      <span>Chief Executive Officer</span>
+      <div class="social">
+        <a href=""><i class="bi bi-twitter-x"></i></a>
+        <a href=""><i class="bi bi-facebook"></i></a>
+        <a href=""><i class="bi bi-instagram"></i></a>
+        <a href=""><i class="bi bi-linkedin"></i></a>
+      </div>
     </div>
   </div>
 </div>
