--- a/FE/src/app/shared/components/toast/toast.component.html
+++ b/FE/src/app/shared/components/toast/toast.component.html
@@ -1,13 +1,15 @@
-@for (toast of toastService.toasts; track $index) {
-<ngb-toast
-  [class]="toast.class + 'toast-container position-fixed bottom-0 end-0 p-3'"
-  [autohide]="true"
-  [delay]="toast.delay || 5000"
-  (hidden)="toastService.remove(toast)"
->
-  <ng-template [ngIf]="isTemplate(toast)" [ngIfElse]="text">
-    <ng-template [ngTemplateOutlet]="toast.textOrTpl"></ng-template>
-  </ng-template>
-  <ng-template #text>{{ toast.textOrTpl }}</ng-template>
-</ngb-toast>
-}
+<div class="toast-container position-fixed top-0 start-50 translate-middle-x">
+  @for (toast of toastService.toasts; track $index) {
+    <ngb-toast
+      [class]="toast?.class"
+      [autohide]="true"
+      [delay]="toast?.delay || 5000"
+      (hidden)="toastService.remove(toast)"
+    >
+      <ng-template [ngIf]="isTemplate(toast)" [ngIfElse]="text">
+        <ng-template [ngTemplateOutlet]="toast?.content"></ng-template>
+      </ng-template>
+      <ng-template #text>{{ toast?.content }}</ng-template>
+    </ngb-toast>
+    }
+</div>
