--- a/FE/src/app/core/auth/components/login-form/login-form.component.html
+++ b/FE/src/app/core/auth/components/login-form/login-form.component.html
@@ -69,7 +69,7 @@
     </button>
     <p class="small fw-bold mt-3">
       Bạn chưa có tài khoản?
-      <a [routerLink]="[control + '/register']" class="link-danger">Đăng ký</a>
+      <a [routerLink]="[role + '/register']" class="link-danger">Đăng ký</a>
     </p>
   </div>
 </form>
