--- a/FE/src/app/core/auth/components/register-form/register-form.component.html
+++ b/FE/src/app/core/auth/components/register-form/register-form.component.html
@@ -135,7 +135,7 @@
     </button>
     <p class="small fw-bold mt-3">
       Bạn đã có tài khoản?
-      <a [routerLink]="[control + '/login']" class="link-primary">Đăng nhập</a>
+      <a [routerLink]="[role + '/login']" class="link-primary">Đăng nhập</a>
     </p>
   </div>
 </form>
