--- a/FE/src/app/core/auth/components/register-form/register-form.component.html
+++ b/FE/src/app/core/auth/components/register-form/register-form.component.html
@@ -48,7 +48,8 @@
         placeholder="Số điện thoại"
         formControlName="phoneNumber"
       />
-      @if( phoneNumber?.invalid && (phoneNumber?.dirty || phoneNumber?.touched) ){
+      @if( phoneNumber?.invalid && (phoneNumber?.dirty || phoneNumber?.touched)
+      ){
       <mat-error>{{ errorForPhoneNumber() }}</mat-error>
       }
     </mat-form-field>
@@ -60,9 +61,9 @@
       class="col d-flex align-items-center pb-3"
       formControlName="gender"
     >
-      <mat-radio-button value="0">Nam</mat-radio-button>
-      <mat-radio-button value="1">Nữ</mat-radio-button>
-      <mat-radio-button value="2">Khác</mat-radio-button>
+      <mat-radio-button value="Male">Nam</mat-radio-button>
+      <mat-radio-button value="Female">Nữ</mat-radio-button>
+      <mat-radio-button value="Other">Khác</mat-radio-button>
     </mat-radio-group>
     <!-- Birthday input -->
     <mat-form-field class="col" appearance="outline">
