--- a/FE/src/app/features/management/lessor/pages/lessor-management/lessor-management.component.html
+++ b/FE/src/app/features/management/lessor/pages/lessor-management/lessor-management.component.html
@@ -28,6 +28,17 @@
               <li class="mb-2">
                 <a
                   matRipple
+                  routerLink="/lessor/management/port"
+                  class="sidebar-menu w-100 text-dark d-flex align-items-center py-2 px-4"
+                  routerLinkActive="active"
+                >
+                  <i class="fa-solid fa-gauge"></i>
+                  <span>Quản lý bài đăng</span>
+                </a>
+              </li>
+              <li class="mb-2">
+                <a
+                  matRipple
                   routerLink="/lessor/management/apartment"
                   class="sidebar-menu w-100 text-dark d-flex align-items-center py-2 px-4"
                   routerLinkActive="active"
