--- a/FE/src/app/features/profiles/components/profile-edit-profile/profile-edit-profile.component.html
+++ b/FE/src/app/features/profiles/components/profile-edit-profile/profile-edit-profile.component.html
@@ -36,9 +36,9 @@
       class="col d-flex align-items-center pb-3"
       formControlName="gender"
     >
-      <mat-radio-button value="0">Nam</mat-radio-button>
-      <mat-radio-button value="1">Nữ</mat-radio-button>
-      <mat-radio-button value="2">Khác</mat-radio-button>
+      <mat-radio-button value="Male">Nam</mat-radio-button>
+      <mat-radio-button value="Female">Nữ</mat-radio-button>
+      <mat-radio-button value="Other">Khác</mat-radio-button>
     </mat-radio-group>
     <!-- Birthday input -->
     <mat-form-field class="col" appearance="outline">
