--- a/FE/src/app/features/management/lessor/pages/lessor-apartment/lessor-apartment.component.html
+++ b/FE/src/app/features/management/lessor/pages/lessor-apartment/lessor-apartment.component.html
@@ -1,8 +1,8 @@
 <div class="checked-out-room">
   <h5 class="fs-5 fw-bold mt-3 mb-4">Quản lý phòng trọ</h5>
   <div class="row align-items-center justify-content-between g-2 mt-3 mb-5">
-    <div class="col-lg-2">
-      <button routerLink="/lessor/management/apartment/post" class="btn btn-dark w-100">Đăng tin</button>
+    <div class="col-lg-3">
+      <button routerLink="/lessor/management/apartment/insert" class="btn btn-dark w-100">Thêm phòng mới</button>
     </div>
     <div class="col-lg-8">
       <app-search></app-search>
