--- a/FE/src/app/features/post/components/post-form/post-form.component.html
+++ b/FE/src/app/features/post/components/post-form/post-form.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="form">
   <a
-    [routerLink]="['/lessor/management/post']"
+    [routerLink]="['/lessor/post']"
     class="link-opacity-50-hover text-secondary d-block mt-4"
     ><i class="fa-solid fa-arrow-left-long"></i>
     Trở lại
