--- a/FE/src/app/core/auth/components/login-form/login-form.component.html
+++ b/FE/src/app/core/auth/components/login-form/login-form.component.html
@@ -2,7 +2,7 @@
   <div
     class="d-flex align-items-center justify-content-center justify-content-lg-start"
   >
-    <p class="lead fw-normal mb-0 me-3">Đăng nhập {{ title }} bằng</p>
+    <p class="lead fw-normal mb-0 me-3">Đăng nhập bằng</p>
     <button type="button" routerLink="/" class="btn btn-primary mx-1">
       <i class="fab fa-facebook-f"></i>
     </button>
@@ -69,7 +69,7 @@
     </button>
     <p class="small fw-bold mt-3">
       Bạn chưa có tài khoản?
-      <a [routerLink]="[role + '/register']" class="link-danger">Đăng ký</a>
+      <a [routerLink]="['/register']" class="link-danger">Đăng ký</a>
     </p>
   </div>
 </form>
