--- a/FE/src/app/core/auth/components/register-form/register-form.component.html
+++ b/FE/src/app/core/auth/components/register-form/register-form.component.html
@@ -2,7 +2,7 @@
   <div
     class="d-flex align-items-center justify-content-center justify-content-lg-start"
   >
-    <p class="lead fw-bold mb-0 me-3">Đăng ký {{ title }} bằng</p>
+    <p class="lead fw-bold mb-0 me-3">Đăng ký bằng</p>
     <button type="button" routerLink="/" class="btn btn-primary mx-1">
       <i class="fab fa-facebook-f"></i>
     </button>
@@ -136,7 +136,7 @@
     </button>
     <p class="small fw-bold mt-3">
       Bạn đã có tài khoản?
-      <a [routerLink]="[role + '/login']" class="link-primary">Đăng nhập</a>
+      <a [routerLink]="['/login']" class="link-primary">Đăng nhập</a>
     </p>
   </div>
 </form>
