--- a/FE/src/app/features/management/lessor/pages/lessor-apartment/lessor-apartment.component.html
+++ b/FE/src/app/features/management/lessor/pages/lessor-apartment/lessor-apartment.component.html
@@ -2,7 +2,9 @@
   <h5 class="fs-5 fw-bold mt-3 mb-4">Quản lý phòng trọ</h5>
   <div class="row align-items-center justify-content-between g-2 mt-3 mb-5">
     <div class="col-lg-3">
-      <button routerLink="/lessor/management/apartment/insert" class="btn btn-dark w-100">Thêm phòng mới</button>
+      <button routerLink="/lessor/apartment/insert" class="btn btn-dark w-100">
+        Thêm phòng mới
+      </button>
     </div>
     <div class="col-lg-8">
       <app-search></app-search>
@@ -12,37 +14,37 @@
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Tên phòng</th>
-      <td mat-cell *matCellDef="let element">{{ element["name"] }}</td>
+      <td mat-cell *matCellDef="let element">{{ element?.name }}</td>
     </ng-container>
 
-    <!-- Lessor Column -->
-    <ng-container matColumnDef="lessor">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Người cho thuê</th>
-      <td mat-cell *matCellDef="let element">{{ element.lessor }}</td>
+    <!-- Category Column -->
+    <ng-container matColumnDef="category">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Thể loại</th>
+      <td mat-cell *matCellDef="let element">{{ element?.category }}</td>
     </ng-container>
 
-    <!-- Phone Number Column -->
-    <ng-container matColumnDef="phoneNumber">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Số điện thoại</th>
-      <td mat-cell *matCellDef="let element">{{ element.phoneNumber }}</td>
+    <!-- Address Column-->
+    <ng-container matColumnDef="address">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Địa chỉ</th>
+      <td mat-cell *matCellDef="let element">{{ element.address }}</td>
     </ng-container>
 
-    <!-- Room Price Column-->
+    <!-- Area Column-->
+    <ng-container matColumnDef="area">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Diện tích</th>
+      <td mat-cell *matCellDef="let element">{{ element.area }}</td>
+    </ng-container>
+
+    <!-- Price Column-->
     <ng-container matColumnDef="price">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Giá</th>
       <td mat-cell *matCellDef="let element">{{ element.price }}</td>
     </ng-container>
 
-    <!-- Duration Column-->
-    <ng-container matColumnDef="duration">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Thời hạn</th>
-      <td mat-cell *matCellDef="let element">{{ element.duration }}</td>
-    </ng-container>
-
-    <!-- Status Column-->
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Trạng thái</th>
-      <td mat-cell *matCellDef="let element">{{ element.status }}</td>
+    <!-- Condition Column-->
+    <ng-container matColumnDef="condition">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Tình trạng</th>
+      <td mat-cell *matCellDef="let element">{{ element.condition }}</td>
     </ng-container>
 
     <!-- Mode Column-->
