--- a/FE/src/app/features/management/lessor/pages/lessor-management/lessor-management.component.html
+++ b/FE/src/app/features/management/lessor/pages/lessor-management/lessor-management.component.html
@@ -17,9 +17,10 @@
               <li class="mb-2">
                 <a
                   matRipple
-                  routerLink="/lessor/management/dashboard"
+                  routerLink="/lessor"
                   class="sidebar-menu w-100 text-dark d-flex align-items-center py-2 px-4"
                   routerLinkActive="active"
+                  [routerLinkActiveOptions]="{ exact: true }"
                 >
                   <i class="fa-solid fa-gauge"></i>
                   <span>Thống kê</span>
@@ -28,7 +29,7 @@
               <li class="mb-2">
                 <a
                   matRipple
-                  routerLink="/lessor/management/port"
+                  routerLink="/lessor/post"
                   class="sidebar-menu w-100 text-dark d-flex align-items-center py-2 px-4"
                   routerLinkActive="active"
                 >
@@ -39,7 +40,7 @@
               <li class="mb-2">
                 <a
                   matRipple
-                  routerLink="/lessor/management/apartment"
+                  routerLink="/lessor/apartment"
                   class="sidebar-menu w-100 text-dark d-flex align-items-center py-2 px-4"
                   routerLinkActive="active"
                 >
