Fix error initializeApp and RoleConfiguration

--- a/FE/src/app/core/layout/header/header.component.html
+++ b/FE/src/app/core/layout/header/header.component.html
@@ -10,7 +10,7 @@
       <ul>
         <li><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Trang chủ</a></li>
         <li><a routerLink="/apartment" routerLinkActive="active">Nhà cho thuê</a></li>
-        <li><a routerLink="/lessor" routerLinkActive="active">Người cho thuê</a></li>
+        <li><a routerLink="/agency" routerLinkActive="active">Người cho thuê</a></li>
         <li><a routerLink="/service" routerLinkActive="active">Dịch vụ</a></li>
         <li><a routerLink="/contact" routerLinkActive="active">Liên hệ</a></li>
       </ul>
