--- a/FE/src/app/features/management/lessor/pages/lessor-apartment/lessor-apartment.component.html
+++ b/FE/src/app/features/management/lessor/pages/lessor-apartment/lessor-apartment.component.html
@@ -26,49 +26,48 @@
     <!-- Address Column-->
     <ng-container matColumnDef="address">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Địa chỉ</th>
-      <td mat-cell *matCellDef="let element">{{ element.address }}</td>
+      <td mat-cell *matCellDef="let element">{{ element?.address }}</td>
     </ng-container>
 
     <!-- Area Column-->
     <ng-container matColumnDef="area">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Diện tích</th>
-      <td mat-cell *matCellDef="let element">{{ element.area }}</td>
+      <td mat-cell *matCellDef="let element">{{ element?.area }}</td>
     </ng-container>
 
     <!-- Price Column-->
     <ng-container matColumnDef="price">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Giá</th>
-      <td mat-cell *matCellDef="let element">{{ element.price }}</td>
+      <td mat-cell *matCellDef="let element">{{ element?.price }}</td>
     </ng-container>
 
     <!-- Condition Column-->
     <ng-container matColumnDef="condition">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Tình trạng</th>
-      <td mat-cell *matCellDef="let element">{{ element.condition }}</td>
+      <td mat-cell *matCellDef="let element">{{ element?.condition }}</td>
     </ng-container>
 
-    <!-- Mode Column-->
-    <ng-container matColumnDef="disabled">
+    <!-- Optional Column-->
+    <ng-container matColumnDef="optional">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
         <button
           mat-icon-button
-          [disabled]="element.disabled"
           [matMenuTriggerFor]="menu"
           class="d-flex justify-content-center align-items-center"
         >
           <i class="fa-solid fa-ellipsis-vertical"></i>
         </button>
         <mat-menu #menu class="px-1">
-          <button (click)="onForm()" mat-menu-item>
-            <i class="fa-solid fa-circle-plus"></i>
-            <span>Gửi yêu cầu</span>
+          <button (click)="onView()" mat-menu-item>
+            <i class="fa-solid fa-eye"></i>
+            <span>Xem</span>
           </button>
-          <button mat-menu-item>
+          <button (click)="onUpdate()" mat-menu-item>
             <i class="fa-solid fa-wrench"></i>
             <span>Sửa</span>
           </button>
-          <button mat-menu-item>
+          <button (click)="onDelete()" mat-menu-item>
             <i class="fa-solid fa-trash"></i>
             <span>Xóa</span>
           </button>
