--- a/FE/src/app/features/management/lessor/pages/lessor-management/lessor-management.component.html
+++ b/FE/src/app/features/management/lessor/pages/lessor-management/lessor-management.component.html
@@ -33,7 +33,7 @@
                   class="sidebar-menu w-100 text-dark d-flex align-items-center py-2 px-4"
                   routerLinkActive="active"
                 >
-                  <i class="fa-solid fa-gauge"></i>
+                  <i class="fa-regular fa-newspaper"></i>
                   <span>Quản lý bài đăng</span>
                 </a>
               </li>
@@ -44,7 +44,7 @@
                   class="sidebar-menu w-100 text-dark d-flex align-items-center py-2 px-4"
                   routerLinkActive="active"
                 >
-                  <i class="fa-solid fa-gauge"></i>
+                  <i class="fa-solid fa-house-chimney-window"></i>
                   <span>Quản lý phòng trọ</span>
                 </a>
               </li>
@@ -53,7 +53,7 @@
         </div>
       </mat-sidenav>
 
-      <mat-sidenav-content>
+      <mat-sidenav-content class="d-flex flex-column vh-100">
         <!-- Header -->
         <mat-toolbar class="header">
           <!-- Toolbar -->
@@ -98,7 +98,7 @@
         </mat-toolbar>
 
         <!-- Content -->
-        <div class="px-lg-4 py-lg-5 p-3">
+        <div class="px-lg-4 py-lg-5 p-3 flex-fill">
           <div class="bg-white shadow pt-2 pb-4 px-4 rounded overflow-x-auto">
             <router-outlet></router-outlet>
           </div>
