--- a/FE/src/app/features/apartment/components/apartment-relationship/apartment-relationship.component.html
+++ b/FE/src/app/features/apartment/components/apartment-relationship/apartment-relationship.component.html
@@ -4,6 +4,6 @@
     <!-- List Apartment -->
     <app-post-list></app-post-list>
     <!-- Pagination -->
-    <app-pagination></app-pagination>
+    <!-- <app-pagination></app-pagination> -->
   </div>
 </div>
