--- a/FE/src/app/features/lessor/components/lessor-list/lessor-list.component.html
+++ b/FE/src/app/features/lessor/components/lessor-list/lessor-list.component.html
@@ -12,6 +12,6 @@
   </div>
   <div class="pt-5">
     <!-- Pagination -->
-    <app-pagination></app-pagination>
+    <!-- <app-pagination></app-pagination> -->
   </div>
 </div>
