--- a/FE/src/app/features/maintenance/components/maintenance-history/maintenance-history.component.html
+++ b/FE/src/app/features/maintenance/components/maintenance-history/maintenance-history.component.html
@@ -75,7 +75,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
   <div class="pt-4">
-    <app-pagination></app-pagination>
+    <!-- <app-pagination></app-pagination> -->
   </div>
 </div>
 
