--- a/FE/src/app/features/post/components/post-root-list/post-root-list.component.html
+++ b/FE/src/app/features/post/components/post-root-list/post-root-list.component.html
@@ -7,6 +7,6 @@
   }
   <div class="pt-5">
     <!-- Pagination -->
-    <app-pagination></app-pagination>
+    <!-- <app-pagination></app-pagination> -->
   </div>
 </div>
