--- a/FE/src/app/features/management/lessor/pages/lessor-post/lessor-post.component.html
+++ b/FE/src/app/features/management/lessor/pages/lessor-post/lessor-post.component.html
@@ -78,7 +78,7 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
     <div class="pt-4">
-      <app-pagination></app-pagination>
+      <!-- <app-pagination></app-pagination> -->
     </div>
   </div>
   
